# fr3_husky

./: MUJOCO.md  README.md
fr3_husky_controller/: ACTION_SERVER_CODEGEN.md  CMakeLists.txt  GENERATE_CONTROLLER.md  fr3_husky_plugin.xml  generate_fr3_action_server.py  generate_fr3_controller.py  generate_fr3_husky_action_server.py  generate_fr3_husky_controller.py  package.xml
fr3_husky_controller/config/: fr3_husky_ros_controllers.yaml  fr3_ros_controllers.yaml
fr3_husky_controller/include/fr3_husky_controller/: fr3_action_controller.hpp  fr3_husky_action_controller.hpp  test_fr3_controller.hpp  test_fr3_husky_controller.hpp
fr3_husky_controller/include/fr3_husky_controller/model/: fr3_husky_model_updater.hpp  fr3_model_updater.hpp  model_updater_base.hpp
fr3_husky_controller/include/fr3_husky_controller/servers/: action_server_base.hpp  idle_control.hpp
fr3_husky_controller/include/fr3_husky_controller/servers/fr3/: cartesian_executor_action_server.hpp  gravity_compensation_action_server.hpp  joint_trajectory_controller_action_server.hpp  move_to_joint_action_server.hpp  omega_haptic_action_server.hpp  ps4_haptic_action_server.hpp  vive_tracker_action_server.hpp
fr3_husky_controller/include/fr3_husky_controller/servers/fr3_husky/: gravity_compensation_action_server.hpp  joint_trajectory_controller_action_server.hpp  move_to_joint_action_server.hpp  omega_haptic_action_server.hpp
fr3_husky_controller/include/fr3_husky_controller/utils/: benchmark.h  dyros_math.h  file_generator.h  motion_primitives.h  robot_utils.hpp
fr3_husky_controller/launch/: fr3_action_controller.launch.py  fr3_controller.launch.py  fr3_husky_action_controller.launch.py  fr3_husky_controller.launch.py  husky_low_level.launch.py
fr3_husky_controller/rviz/: fr3.rviz  fr3_husky.rviz
fr3_husky_controller/src/: fr3_action_controller.cpp  fr3_action_controller_parameters.yaml  fr3_controller_parameters.yaml  fr3_husky_action_controller.cpp  fr3_husky_action_controller_parameters.yaml  fr3_husky_controller_parameters.yaml  test_fr3_controller.cpp  test_fr3_husky_controller.cpp
fr3_husky_controller/src/model/: fr3_husky_model_updater.cpp  fr3_model_updater.cpp  model_updater_base.cpp
fr3_husky_controller/src/servers/: action_server_base.cpp  idle_control.cpp
fr3_husky_controller/src/servers/fr3/: cartesian_executor_action_server.cpp  gravity_compensation_action_server.cpp  joint_trajectory_controller_action_server.cpp  move_to_joint_action_server.cpp  omega_haptic_action_server.cpp  ps4_haptic_action_server.cpp  vive_tracker_action_server.cpp
fr3_husky_controller/src/servers/fr3_husky/: gravity_compensation_action_server.cpp  joint_trajectory_controller_action_server.cpp  move_to_joint_action_server.cpp  omega_haptic_action_server.cpp
fr3_husky_controller/src/utils/: dyros_math.cpp  motion_primitives.cpp
fr3_husky_description/: CMakeLists.txt  package.xml
fr3_husky_description/launch/: visualize_fr3.launch.py  visualize_fr3_husky.launch.py
fr3_husky_description/mjcf/: box_base.xml.xacro  dual_fr3.xml.xacro  dual_fr3_husky.xml.xacro  single_fr3.xml.xacro  single_fr3_husky.xml.xacro
fr3_husky_description/robots/: box_base.xacro  dual_fr3.srdf.xacro  dual_fr3.urdf.xacro  dual_fr3_husky.srdf.xacro  dual_fr3_husky.urdf.xacro  husky_base.srdf.xacro  husky_base.xacro  single_fr3.srdf.xacro  single_fr3.urdf.xacro  single_fr3_husky.srdf.xacro  single_fr3_husky.urdf.xacro
fr3_husky_description/robots/deprecated/: dual_fr3.urdf.xacro
fr3_husky_description/robots/deprecated/for_control/: dual_fr3_husky_w_gripper.srdf  dual_fr3_husky_w_gripper.urdf  husky.srdf  husky.urdf  single_fr3.srdf  single_fr3.urdf  single_fr3_husky.srdf  single_fr3_husky.urdf  single_fr3_husky_w_gripper.srdf  single_fr3_husky_w_gripper.urdf  single_fr3_w_gripper.srdf  single_fr3_w_gripper.urdf
fr3_husky_description/rviz/: visualize_fr3.rviz  visualize_fr3_husky.rviz
fr3_husky_moveit_config/: CMakeLists.txt  package.xml
fr3_husky_moveit_config/config/dual/: dual_fr3_controllers.yaml  dual_fr3_husky_controllers.yaml  dual_fr3_ros_controllers.yaml  kinematics.yaml
fr3_husky_moveit_config/config/left/: kinematics.yaml  single_fr3_controllers.yaml  single_fr3_husky_controllers.yaml  single_fr3_ros_controllers.yaml
fr3_husky_moveit_config/config/right/: kinematics.yaml  single_fr3_controllers.yaml  single_fr3_husky_controllers.yaml  single_fr3_ros_controllers.yaml
fr3_husky_moveit_config/launch/: fr3_moveit.launch.py  move_group.launch.py
fr3_husky_moveit_config/rviz/: moveit.rviz
fr3_husky_msgs/: CMakeLists.txt  package.xml
fr3_husky_msgs/action/: GravityCompensation.action  MoveToJoint.action  OmegaHaptic.action  ViveTracker.action
