<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_husky_controller</name>
  <version>0.0.0</version>
  <description>Controllers for the FR3 Husky system.</description>
  <maintainer email="yoonjh98@snu.ac.kr">Junhoen Yoon</maintainer>
  <license>Apache 2.0</license>
  <author>Junhoen Yoon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ros2_control_cmake</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>controller_interface</depend>
  <depend>dyros_robot_controller</depend>
  <depend>fr3_husky_msgs</depend>
  <depend>franka_semantic_components</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>urdf</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- MoveIt2 planning interface (used by move_to_joint_server) -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>action_msgs</depend>

  <exec_depend>fr3_husky_description</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
