<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_husky_description</name>
  <version>0.0.0</version>
  <description>fr3_husky_description contains URDF files and meshes of  Franka FR3 and ClearPath HUsky robots</description>
  <maintainer email="yoonjh98@snu.ac.kr">Junhoen Yoon</maintainer>
  <license>Apache 2.0</license>
  <author>Junhoen Yoon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>husky_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>